--- a/.gitignore
+++ b/.gitignore
@@ -208,6 +208,9 @@ __marimo__/
 /secrets.txt
 
 marketing-strategist-agent/
+mlruns/
+data/
+/app.log
 # -------------------
 # Python
 # -------------------
@@ -274,3 +277,5 @@ build/
 # -------------------
 .DS_Store
 Thumbs.db
+
+data/
