--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-pandas
-numpy
-prophet
-scikit-learn
-fastapi
-uvicorn
-dvc[s3]
-mlflow
-boto3
-joblib
-crewai
-langchain
-langchain-core
-langchain-community
-langchain-openai
-langchain-experimental
-langchain-text-splitters
-langsmith
-pydantic
+pandas==2.2.2
+numpy==1.26.4
+prophet==1.1.5
+scikit-learn==1.5.1
+fastapi==0.112.1
+uvicorn==0.30.6
+dvc[s3]==3.55.2
+mlflow==2.15.1
+boto3==1.35.4
+joblib==1.4.2
+crewai==0.51.1
+langchain==0.2.6
+langchain-core==0.2.10
+langchain-community==0.2.5
+langchain-openai==0.1.7
+langchain-experimental==0.0.61
+langchain-text-splitters==0.2.0
+langsmith==0.1.82
+pydantic==2.8.2
