Remove deployment/k8s from tracking and add to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -227,6 +227,8 @@ venv/
 env/
 ENV/
 marketing-strategist-agent/
+deployment/
+deployment/k8s/
 
 # Jupyter notebook checkpoints
 .ipynb_checkpoints/
